--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "firebase": "^5.6.0",
+    "firebaseui": "^3.4.1",
+    "vue": "^2.5.17",
+    "vuetify": "^1.3.11",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.3",
