--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^5.6.0",
     "firebaseui": "^3.4.1",
     "vue": "^2.5.17",
+    "vue-calendar-heatmap": "^0.8.4",
     "vuetify": "^1.3.11",
     "vuex": "^3.0.1"
   },
